--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body{
     background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .links{
@@ -30,7 +31,6 @@ ul{
 
 li{
     color: #F3F3F3;
-    font-family: Inter;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -52,4 +52,21 @@ li{
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
+}
+
+h1{
+    color: #222;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+h2{
+    width: 45.0625rem;
+    color: #222;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
